@@ -1,4 +1,4 @@
-/*	$KAME: keydb.h,v 1.24 2003/09/07 15:12:10 itojun Exp $	*/
+/*	$KAME: keydb.h,v 1.25 2004/12/01 07:48:24 suz Exp $	*/
 
 /*
  * Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -35,6 +35,18 @@
 #ifdef _KERNEL
 
 #include <netkey/key_var.h>
+
+#ifndef	_SOCKADDR_UNION_DEFINED
+#define	_SOCKADDR_UNION_DEFINED
+/*
+ * The union of all possible address formats we handle.
+ */
+union sockaddr_union {
+	struct sockaddr		sa;
+	struct sockaddr_in	sin;
+	struct sockaddr_in6	sin6;
+};
+#endif	/* _SOCKADDR_UNION_DEFINED */
 
 /* Security Assocciation Index */
 /* NOTE: Ensure to be same address family */
